--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>사랑하는 OO에게</title>
 </head>
 <body>
-    <h1>사랑하는 OO에게</h1>
+    <h1>사랑하는 몽이에게</h1>
     <p>이 홈페이지는 나의 마음을 전하려고 만들었어.</p>
     <p>항상 곁에 있어줘서 고마워! 사랑해 ❤️</p>
 </body>
